<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ScanEditAppearanceActivity">

    <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/photo_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@id/progressBarLoading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/buttonRotate"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#00000000"
        android:onClick="onRotateClicked"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rotate_right_black_24dp"
        android:contentDescription="@string/rotate" />

    <ProgressBar
            android:id="@+id/progressBarLoading"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toTopOf="@id/edit_tools"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo_view"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/edit_tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBarLoading">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/document_size"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_proportions"
            app:layout_constraintStart_toStartOf="@+id/spinner_proportions"
            app:layout_constraintTop_toTopOf="@+id/okSaveButton"
            tools:ignore="SpUsage" />

        <Spinner
            android:id="@+id/spinner_proportions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:dropDownWidth="250dp"
            android:entries="@array/sizes"
            android:theme="@android:style/Widget.Holo.Light.DropDownItem"
            app:layout_constraintEnd_toStartOf="@+id/okSaveButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/okShareButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onOkClicked"
            android:scaleType="fitXY"
            android:transitionName="@string/fab_trans_name"
            app:backgroundTint="@color/primaryColor"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinner_effects"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/spinner_proportions"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_share_black_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/okSaveButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onOkClicked"
            android:scaleType="fitXY"
            android:transitionName="@string/fab_trans_name"
            app:backgroundTint="@color/primaryColor"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinner_effects"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/spinner_proportions"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_save_black_24dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/effect"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_effects"
            app:layout_constraintStart_toStartOf="@+id/spinner_effects"
            app:layout_constraintTop_toTopOf="@+id/okSaveButton"
            tools:ignore="SpUsage" />

        <Spinner
            android:id="@+id/spinner_effects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:dropDownWidth="250dp"
            android:entries="@array/effects"
            android:theme="@android:style/Widget.Holo.Light.DropDownItem.Spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/okSaveButton"
            app:layout_constraintTop_toBottomOf="@id/textView4" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/okSaveButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>